Fix studio thumbnail border in dark mode

--- a/addons/dark-www/experimental_scratchwww.css
+++ b/addons/dark-www/experimental_scratchwww.css
@@ -102,6 +102,7 @@ body:not(.sa-body-editor) .button.white,
 .studio-tab-nav li,
 .user-projects-modal .user-projects-modal-nav button,
 body:not(.sa-body-editor) .modal-content,
+.studio-info .studio-image,
 .grid .thumbnail,
 .studio-project-tile,
 .studio-member-tile,
@@ -150,6 +151,7 @@ body:not(.sa-body-editor) .stage-header_stage-button_hkl9B {
 .studio-adder-section .studio-adder-row .studio-adder-vertical-divider,
 .studio-tab-nav,
 .studio-tab-nav a.nav_link:not(.active) > li,
+.studio-info .studio-image,
 .user-projects-modal .user-projects-modal-nav button,
 .studio-project-tile,
 .studio-member-tile,
